@@ -1,3 +1,7 @@
+2008-05-16  Jeremy Cribb <jcribb@email.unc.edu>
+	* ta2mat.m: parses text file generated by TA Instruments Area Rheometer and puts into a matlab structure.
+	* ta2mat.notes.m: design notes about ta2mat.
+
 2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
 	* cap_plot.m: corrected documentation.
 
